Исправления начальной разметки.

--- a/catolog.html
+++ b/catolog.html
@@ -11,14 +11,14 @@
           <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип дизайн-студии «Нёрдс»">
         </a>
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Клиенты</a></li>
-          <li><a href="catalog.html">Магазин</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="#nowhere">Студия</a></li>
+          <li><a href="#nowhere">Клиенты</a></li>
+          <li><a href="catolog.html">Магазин</a></li>
+          <li><a href="#nowhere">Контакты</a></li>
         </ul>
         <ul>
           <li>
-             <a href=""> Корзина</a>
+             <a href="#nowhere">Корзина</a>
            </li>
         </ul>
       </nav>
@@ -29,88 +29,52 @@
             <h2>Список шаблонов</h2>
             <ul>
                 <li>
-                    <h3>
-                        <a href="">
-                            <span>Sedona</span>
-                            <span>Информационный сайт для туристов</span>
-                        </a>
-                    </h3>
-                    <a href="">
-                        <img src="https://via.placeholder.com/150x100" alt="Информационный сайт для туристов">
-                    </a>
-                    <a href="">9900 руб.</a>
+                    <h3><a href="#nowhere">Sedona</a></h3>
+                    <p>Информационный сайт для туристов</p>
+                    <img src="https://via.placeholder.com/150x100" alt="Информационный сайт для туристов">
+                    <a href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
-                    <h3>
-                         <a href="">
-                            <span>Pink</span>
-                            <span>Сайт приложений</span>
-                        </a>
-                    </h3>
-                    <a href="">
-                        <img src="https://via.placeholder.com/150x100" alt="Сайт приложений">
-                    </a>
-                    <a href=""></a>
+                    <h3><a href="#nowhere">PinkApp</a></h3>
+                    <p>Продуктовый лендинг приложения для iOS и Android</p>
+                    <img src="https://via.placeholder.com/150x100" alt="Продуктовый лендинг приложения для iOS и Android">
+                    <a href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
-                    <h3>
-                        <a href="">
-                            <span>Borodinski</span>
-                            <span>Сайт барбершопа</span>
-                        </a>
-                    </h3>
-                     <a href="">
-                        <img src="https://via.placeholder.com/150x100" alt="Сайт барбершопа">
-                    </a>
-                    <a href=""></a>
+                    <h3><a href="#nowhere">Barbershop</a></h3>
+                    <p>Сайт салона красоты. Для мужчин, да.</p>
+                    <img src="https://via.placeholder.com/150x100" alt="Сайт салона красоты. Для мужчин, да.">
+                    <a href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
-                    <h3>
-                        <a href="">
-                            <span>Mohka</span>
-                            <span></span>
-                        </a>
-                    </h3>
-                    <a href="">
-                        <img src="https://via.placeholder.com/150x100" alt="Сайт по продажам вязанных корзин">
-                    </a>
-                    <a href=""></a>
+                    <h3><a href="#nowhere">Mishka</a></h3>
+                    <p>Интернет-магазин вязаных игрушек</p>
+                    <img src="https://via.placeholder.com/150x100" alt="Интернет-магазин вязаных игрушек">
+                    <a href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
-                    <h3>
-                        <a href="">
-                            <span>School</span>
-                            <span>Учебный сайт</span>
-                        </a>
-                    </h3>
-                    <a href="">
-                        <img src="https://via.placeholder.com/150x100" alt="Учебный сайт">
-                    </a>
-                    <a href=""></a>
+                    <h3><a href="#nowhere">A Plus</a></h3>
+                    <p>Лендинг курсов повышения квалификации</p>
+                    <img src="https://via.placeholder.com/150x100" alt="Лендинг курсов повышения квалификации">
+                    <a href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
-                     <h3>
-                        <a href="">
-                            <span>Kvast</span>
-                            <span>Сайт по продаже кваса</span>
-                        </a>
-                    </h3>
-                    <a href="">
-                        <img src="https://via.placeholder.com/150x100" alt="Сайт по продаже кваса">
-                    </a>
-                    <a href=""></a>
+                    <h3><a href="#nowhere">Кваст</a></h3>
+                    <p>Промо-сайт производителя крафтового кваса</p>
+                    <img src="https://via.placeholder.com/150x100" alt="Промо-сайт производителя крафтового кваса">
+                    <a href="#nowhere">9900 руб.</a>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
             <ul>
-              <li><a href="">Вконтакте</a></li>
-              <li><a href="">Фейсбук</a></li>
-              <li><a href="">Инстаграм</a></li>
+              <li><a href="#nowhere">Вконтакте</a></li>
+              <li><a href="#nowhere">Фейсбук</a></li>
+              <li><a href="#nowhere">Инстаграм</a></li>
             </ul>
-            <p>
-              <span>Давайте дружить это выгодно!</span>
-              <span>Скидка 10% для друзей из социальных сетей.</span>
-            </p>
+            <p>Давайте дружить это выгодно!</p>
+            <p>Скидка 10% для друзей из социальных сетей.</p>
     </footer>
+  </body>  
+</html>
