--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
   <body>
     <header>
       <nav>
-        <a href="">
-          <img src="ihttps://via.placeholder.com/150x100" width="150" height="100" alt="Логотип дизайн-студии «Нёрдс»">
-        </a>
+        <img src="ihttps://via.placeholder.com/150x100" width="150" height="100" alt="Логотип дизайн-студии «Нёрдс»">
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Клиенты</a></li>
-          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="catolog.html">Магазин</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
         <ul>
@@ -29,35 +27,30 @@
         <h2>Список видов проектов</h2>
         <ul>
           <li>
-            <a href="catolog.html">
-              <h3>Веб-сайты</h3>
-            </a>
-             <p>
-               Мир никогда не будет, прежним после того как увидит ваш сайт
-             </p>
-             <p>
-               <a href="catolog.html">Заказать</a>
+            <h3>Веб-сайты</h3>
+            <p>
+              Мир никогда не будет прежним после того как увидит ваш сайт!
+            </p>
+            <p>
+              <a href="catolog.html">Заказать</a>
             </p>
           </li>
           <li>
-            <a href="catolog.html">
-              <h3>Приложения</h3>
-            </a>
-             <p>
-               Покорите топ-10 приложений в AppStore и Goole Play
-             </p>
-             <p>
-               <a href="">Заказать</a>
+            <h3>Приложения</h3>
+            <p>
+              Покорите топ-10 приложений в AppStore и Google Play
+            </p>
+            <p>
+              <a href="">Заказать</a>
             </p>
           </li>
-          <li><a href="">
-              <h3>Презентации</h3>
-            </a>
-             <p>
-               Вы даже не подозреваете, насколько вы изумительны!
-             </p>
-             <p>
-               <a href="">Заказать</a>
+          <li>
+            <h3>Презентации</h3>
+            <p>
+              Вы даже не подозреваете, насколько вы изумительны!
+            </p>
+            <p>
+              <a href="">Заказать</a>
             </p>
           </li>
         </ul>
