Начинаем готовить графику

--- a/catolog.html
+++ b/catolog.html
@@ -8,12 +8,12 @@
     <header>
       <nav>
         <a href="index.html">
-          <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип дизайн-студии «Нёрдс»">
+          <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип дизайн-студии «Нёрдс»">
         </a>
         <ul>
           <li><a href="#nowhere">Студия</a></li>
           <li><a href="#nowhere">Клиенты</a></li>
-          <li><a href="catolog.html">Магазин</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
           <li><a href="#nowhere">Контакты</a></li>
         </ul>
         <ul>
@@ -31,37 +31,37 @@
                 <li>
                     <h3><a href="#nowhere">Sedona</a></h3>
                     <p>Информационный сайт для туристов</p>
-                    <img src="https://via.placeholder.com/150x100" alt="Информационный сайт для туристов">
+                    <img src="img/img-sedona.jpg" alt="Информационный сайт для туристов">
                     <a href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
                     <h3><a href="#nowhere">PinkApp</a></h3>
                     <p>Продуктовый лендинг приложения для iOS и Android</p>
-                    <img src="https://via.placeholder.com/150x100" alt="Продуктовый лендинг приложения для iOS и Android">
+                    <img src="img/img-pink.jpg" alt="Продуктовый лендинг приложения для iOS и Android">
                     <a href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
                     <h3><a href="#nowhere">Barbershop</a></h3>
                     <p>Сайт салона красоты. Для мужчин, да.</p>
-                    <img src="https://via.placeholder.com/150x100" alt="Сайт салона красоты. Для мужчин, да.">
+                    <img src="img/img-barbershop.jpg" alt="Сайт салона красоты. Для мужчин, да.">
                     <a href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
                     <h3><a href="#nowhere">Mishka</a></h3>
                     <p>Интернет-магазин вязаных игрушек</p>
-                    <img src="https://via.placeholder.com/150x100" alt="Интернет-магазин вязаных игрушек">
+                    <img src="img/img-mishka.jpg" alt="Интернет-магазин вязаных игрушек">
                     <a href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
                     <h3><a href="#nowhere">A Plus</a></h3>
                     <p>Лендинг курсов повышения квалификации</p>
-                    <img src="https://via.placeholder.com/150x100" alt="Лендинг курсов повышения квалификации">
+                    <img src="img/img-aplus.jpg" alt="Лендинг курсов повышения квалификации">
                     <a href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
                     <h3><a href="#nowhere">Кваст</a></h3>
                     <p>Промо-сайт производителя крафтового кваса</p>
-                    <img src="https://via.placeholder.com/150x100" alt="Промо-сайт производителя крафтового кваса">
+                    <img src="img/img-kvast.jpg" alt="Промо-сайт производителя крафтового кваса">
                     <a href="#nowhere">9900 руб.</a>
                 </li>
             </ul>
