--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <nav>
-        <img src="ihttps://via.placeholder.com/150x100" width="150" height="100" alt="Логотип дизайн-студии «Нёрдс»">
+        <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип дизайн-студии «Нёрдс»">
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Клиенты</a></li>
