--- a/catolog.html
+++ b/catolog.html
@@ -25,6 +25,54 @@
     </header>
     <main>
         <h1>Магазин готовых шаблонов</h1>
+        <section class="filters">
+          <h2 class="visually-hidden">Фильтр товаров</h2>
+          <form class="filter" method="GET" action="https://echo.htmlacademy.ru">
+            <fieldset>
+              <legend>Сетка:</legend>
+              <ul>
+                <li class="filter-option">
+                  <input class="visually-hidden" type="radio" name="product-group" value="adaptive" id="filter-adaptive" checked>
+                  <label for="filter-adaptive">Адаптивная</label> 
+                </li>
+                <li class="filter-option">
+                  <input class="visually-hidden" type="radio" name="product-group" value="fixed" id="filter-fixed">
+                  <label for="filter-fixed">Фиксированная</label> 
+                </li>
+                <li class="filter-option">
+                  <input class="visually-hidden" type="radio" name="product-group" value="rubber" id="filter-rubber">
+                  <label for="filter-rubber">Резиновая</label> 
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset>
+              <legend>Особенности:</legend>
+              <ul>
+                <li class="filter-option">
+                  <input class="visually-hidden" type="checkbox" name="slider" id="filter-slider" checked>
+                  <label for="filter-slider">Слайдер</label> 
+                </li>
+                <li class="filter-option">
+                  <input class="visually-hidden" type="checkbox" name="advantage" id="filter-advantage">
+                  <label for="filter-advantage">Блок преимуществ</label> 
+                </li>
+                <li class="filter-option">
+                    <input class="visually-hidden" type="checkbox" name="news" id="filter-news" checked>
+                  <label for="filter-news">Новости</label> 
+                </li>
+                <li class="filter-option">
+                  <input class="visually-hidden" type="checkbox" name="hall" id="filter-hall">
+                  <label for="filter-hall">Галерея</label> 
+                </li>
+                <li class="filter-option">
+                  <input class="visually-hidden" type="checkbox" name="basket" id="filter-basket">
+                  <label for="filter-basket">Корзина</label> 
+                </li>
+              </ul>
+            </fieldset>
+            <button type="submit">Показать</button>
+          </form>
+        </section>
         <section>
             <h2>Список шаблонов</h2>
             <ul>
@@ -66,6 +114,25 @@
                 </li>
             </ul>
         </section>
+        <section>
+            <h2>Напишите нам</h2>
+            <form class="feedback" method="POST" action="https://echo.htmlacademy.ru">
+              <p>
+                <label for="feedback-name">Ваше имя:</label>
+                <input id="feedback-name" type="text" name="name" value="" placeholder="Имя Фамилия">
+              </p>
+              <p>
+                <label for="feedback-email">Ваш e-mail:</label>
+                <input id="feedback-email" type="text" name="e-mail" value="" placeholder="email@example.com">
+              </p>
+              <p>
+                <label for="feedback-text">Текст письма:</label>
+                <textarea id="feedback-text" name="text-email" placeholder="В свободной форме"></textarea>
+              </p>
+              <button class="button" type="submit">Отправить</button>
+            </form>
+            <button type="button">Закрыть</button>
+          </section>
     </main>
     <footer>
             <ul>
