--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
       <nav>
         <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип дизайн-студии «Нёрдс»">
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Клиенты</a></li>
-          <li><a href="catolog.html">Магазин</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="#nowhere">Студия</a></li>
+          <li><a href="#nowhere">Клиенты</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="#nowhere">Контакты</a></li>
         </ul>
         <ul>
           <li>
-             <a href=""> Корзина</a>
+             <a href="#nowhere">Корзина</a>
            </li>
         </ul>
       </nav>
@@ -32,7 +32,7 @@
               Мир никогда не будет прежним после того как увидит ваш сайт!
             </p>
             <p>
-              <a href="catolog.html">Заказать</a>
+              <a href="#nowhere">Заказать</a>
             </p>
           </li>
           <li>
@@ -41,7 +41,7 @@
               Покорите топ-10 приложений в AppStore и Google Play
             </p>
             <p>
-              <a href="">Заказать</a>
+              <a href="#nowhere">Заказать</a>
             </p>
           </li>
           <li>
@@ -50,17 +50,36 @@
               Вы даже не подозреваете, насколько вы изумительны!
             </p>
             <p>
-              <a href="">Заказать</a>
+              <a href="#nowhere">Заказать</a>
             </p>
           </li>
         </ul>
       </section>
+      <section>
+        <h2>Напишите нам</h2>
+        <form class="feedback" method="POST" action="https://echo.htmlacademy.ru">
+          <p>
+            <label for="feedback-name">Ваше имя:</label>
+            <input id="feedback-name" type="text" name="name" value="" placeholder="Имя Фамилия">
+          </p>
+          <p>
+            <label for="feedback-email">Ваш e-mail:</label>
+            <input id="feedback-email" type="text" name="e-mail" value="" placeholder="email@example.com">
+          </p>
+          <p>
+            <label for="feedback-text">Текст письма:</label>
+            <textarea id="feedback-text" name="text-email" placeholder="В свободной форме"></textarea>
+          </p>
+          <button class="button" type="submit">Отправить</button>
+        </form>
+        <button type="button">Закрыть</button>
+      </section>
     </main>
     <footer>
       <ul>
-        <li><a href="">Вконтакте</a></li>
-        <li><a href="">Фейсбук</a></li>
-        <li><a href="">Инстаграм</a></li>
+        <li><a href="#nowhere">Вконтакте</a></li>
+        <li><a href="#nowhere">Фейсбук</a></li>
+        <li><a href="#nowhere">Инстаграм</a></li>
       </ul>
       <p>
         <span>Давайте дружить это выгодно!</span>
