--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
         <form class="feedback" method="POST" action="https://echo.htmlacademy.ru">
           <p>
             <label for="feedback-name">Ваше имя:</label>
-            <input id="feedback-name" type="text" name="name" value="" placeholder="Имя Фамилия">
+            <input id="feedback-name" type="text" name="name" placeholder="Имя Фамилия">
           </p>
           <p>
             <label for="feedback-email">Ваш e-mail:</label>
-            <input id="feedback-email" type="text" name="e-mail" value="" placeholder="email@example.com">
+            <input id="feedback-email" type="email" name="e-mail" placeholder="email@example.com">
           </p>
           <p>
             <label for="feedback-text">Текст письма:</label>
