--- a/catolog.html
+++ b/catolog.html
@@ -25,8 +25,7 @@
     </header>
     <main>
         <h1>Магазин готовых шаблонов</h1>
-        <section class="filters">
-          <h2 class="visually-hidden">Фильтр товаров</h2>
+        <section>
           <form class="filter" method="GET" action="https://echo.htmlacademy.ru">
             <fieldset>
               <legend>Сетка:</legend>
@@ -49,23 +48,23 @@
               <legend>Особенности:</legend>
               <ul>
                 <li class="filter-option">
-                  <input class="visually-hidden" type="checkbox" name="slider" id="filter-slider" checked>
+                  <input class="visually-hidden" type="checkbox" name="features" value="slider" id="filter-slider" checked>
                   <label for="filter-slider">Слайдер</label> 
                 </li>
                 <li class="filter-option">
-                  <input class="visually-hidden" type="checkbox" name="advantage" id="filter-advantage">
+                  <input class="visually-hidden" type="checkbox" name="features" value="advantage" id="filter-advantage">
                   <label for="filter-advantage">Блок преимуществ</label> 
                 </li>
                 <li class="filter-option">
-                    <input class="visually-hidden" type="checkbox" name="news" id="filter-news" checked>
+                    <input class="visually-hidden" type="checkbox" name="features" value="news" id="filter-news" checked>
                   <label for="filter-news">Новости</label> 
                 </li>
                 <li class="filter-option">
-                  <input class="visually-hidden" type="checkbox" name="hall" id="filter-hall">
+                  <input class="visually-hidden" type="checkbox" name="features" value="hall" id="filter-hall">
                   <label for="filter-hall">Галерея</label> 
                 </li>
                 <li class="filter-option">
-                  <input class="visually-hidden" type="checkbox" name="basket" id="filter-basket">
+                  <input class="visually-hidden" type="checkbox" name="features" value="basket" id="filter-basket">
                   <label for="filter-basket">Корзина</label> 
                 </li>
               </ul>
@@ -119,11 +118,11 @@
             <form class="feedback" method="POST" action="https://echo.htmlacademy.ru">
               <p>
                 <label for="feedback-name">Ваше имя:</label>
-                <input id="feedback-name" type="text" name="name" value="" placeholder="Имя Фамилия">
+                <input id="feedback-name" type="text" name="name" placeholder="Имя Фамилия">
               </p>
               <p>
                 <label for="feedback-email">Ваш e-mail:</label>
-                <input id="feedback-email" type="text" name="e-mail" value="" placeholder="email@example.com">
+                <input id="feedback-email" type="email" name="e-mail" value="" placeholder="email@example.com">
               </p>
               <p>
                 <label for="feedback-text">Текст письма:</label>
