--- a/catolog.html
+++ b/catolog.html
@@ -70,9 +70,7 @@
               </ul>
             </fieldset>
             <button type="submit">Показать</button>
-          </form>
-        </section>
-        <section>
+            </form>
             <h2>Список шаблонов</h2>
             <ul>
                 <li>
@@ -122,7 +120,7 @@
               </p>
               <p>
                 <label for="feedback-email">Ваш e-mail:</label>
-                <input id="feedback-email" type="email" name="e-mail" value="" placeholder="email@example.com">
+                <input id="feedback-email" type="email" name="e-mail" placeholder="email@example.com">
               </p>
               <p>
                 <label for="feedback-text">Текст письма:</label>
