--- a/catolog.html
+++ b/catolog.html
@@ -26,6 +26,25 @@
     <main>
         <h1>Магазин готовых шаблонов</h1>
         <section>
+          <div>
+            <div>
+              <p>Сортировать</p>
+              <p>По цене</p>
+              <p>По типу</p>
+              <p>По названию</p>
+            </div>
+            <div>
+              <!-- <div>Здесь нарисовать линию с двумя кнопками? Тем самым с эмитировать выбор диапазонаю </div> -->
+              <p>
+              <label for="0"></label>
+              <input type="text" value="0" id="0">
+              </p>
+              <p>
+              <label for="15000"></label>
+              <input type="text" value="15000" id="15000">
+              </p>
+            </div>
+          </div>
           <form class="filter" method="GET" action="https://echo.htmlacademy.ru">
             <fieldset>
               <legend>Сетка:</legend>
@@ -110,6 +129,25 @@
                     <a href="#nowhere">9900 руб.</a>
                 </li>
             </ul>
+            <button type="button">1</button>
+            <button type="button">2</button>
+            <button type="button">3</button>
+            <button type="button">Следующая</button>
+        </section>
+        <section>
+            <h2 class="visually-hidden">Как до нас добраться</h2>
+            <p>
+              <img src="img/map.png" width="1440" height="416" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+            </p>
+            <h3>NЁRDS DESIGN STUDIO</h3>
+            <p>
+                191186, Санкт-Петербург,<br> 
+                ул. Б. Конюшенная, д. 19/8<br>
+                тел. +7 (812) 275-75-75
+            </p>
+            <button type="button">
+                Напишите нам
+            </button>
         </section>
         <section>
             <h2>Напишите нам</h2>
