--- a/index.html
+++ b/index.html
@@ -24,36 +24,134 @@
     <main>
       <h1>Дизайн-студия "Нёрдс"</h1>
       <section>
+        <h2 class="visually-hidden">Слайдер преимуществ</h2>
+        <ul>
+          <li>
+            <h3>Долго, дорого,<br>скрупулезно.</h3>
+            <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
+            <p>
+              <a href="#nowhere">Узнать больше</a>
+            </p>
+            <img src="img/slide1.jpg" width="698" height="413" alt="Слайдер 1">
+          </li>
+          <li>
+            <h3>Любим математику<br>как никто другой</h3>
+            <p>Никакого креатива, только математические формулы<br>для расчета идеальных пропорций.</p>
+            <p>
+              <a href="#nowhere">Узнать больше</a>
+            </p>
+            <img src="img/slide2.jpg" width="663" height="430" alt="Слайдер 2">
+          </li>
+          <li>
+            <h3>Только ночь,<br>только хардкор</h3>
+            <p>Работать днем, как все? Мы против этого.<br>
+              Ближе к полуночи работа только начинается.</p>
+            <p>
+              <a href="#nowhere">Узнать больше</a>
+            </p>
+            <img src="img/slide3.jpg" width="759" height="411" alt="Слайдер 3">
+          </li>
+        </ul>
+      </section>
+      <section>
         <h2>Список видов проектов</h2>
         <ul>
           <li>
+            <a href="#nowhere">
+              <img src="img/illustration-1.png" width="300" height="146" alt="Илюстратор 1">
+            </a>
             <h3>Веб-сайты</h3>
             <p>
-              Мир никогда не будет прежним после того как увидит ваш сайт!
+              Мир никогда не будет прежним<br>после того как увидит ваш сайт!
             </p>
             <p>
               <a href="#nowhere">Заказать</a>
             </p>
           </li>
           <li>
+            <a href="#nowhere">
+              <img src="img/illustration-2.png" width="300" height="146" alt="Илюстратор 2">
+            </a>
             <h3>Приложения</h3>
             <p>
-              Покорите топ-10 приложений в AppStore и Google Play
+              Покорите топ-10 приложений в<br>AppStore и Google Play
             </p>
             <p>
               <a href="#nowhere">Заказать</a>
             </p>
           </li>
           <li>
+            <a href="#nowhere">
+              <img src="img/illustration-3.png" width="300" height="146" alt="Илюстратор 3">
+            </a>
             <h3>Презентации</h3>
             <p>
-              Вы даже не подозреваете, насколько вы изумительны!
+              Вы даже не подозреваете,<br>насколько вы изумительны!
             </p>
             <p>
               <a href="#nowhere">Заказать</a>
             </p>
           </li>
         </ul>
+      </section>
+      <section>
+        <h2>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h2>
+        <p>
+          Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
+          превыше креатива. Работаем не покладая рук, как роботы.
+        </p>
+        <h3>Выполняем заказы на разработку:</h3>
+        <ul>
+          <li>Веб-сайтов любой сложности</li>
+          <li>Мобильных приложений для iOS и Android</li>
+          <li>Слайдшоу и видео для корпоративных презентаций</li>
+        </ul>
+        <img src="img/nerds-illustration.png" width="360" height="208" alt="Илюстрация логотипа">
+        <h3>с 2004 года Любим точность во всем:</h3>
+        <ul>
+          <li>
+            <p>146%</p>
+            <p>Уровень самоотдачи</p>
+          </li>
+          <li>
+            <p>100%</p>
+            <p>Соблюдение сроков</p>
+          </li>
+          <li>
+            <p>50%</p>
+            <p>Минимальная предоплата</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2 class="visually-hidden">Партнеры дизайн-студии «Нёрдс»</h2>
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/logo-1.png" width="199" height="68" alt="Логотип онлайн-курсов HTMLАкадемии">
+        </a>
+        <a href="#nowhere">
+          <img src="img/logo-2.png" width="209" height="90" alt="Логотип барбершопа Бородинский">
+        </a>
+        <a href="#nowhere">
+          <img src="img/logo-3.png" width="185" height="52" alt="Логотип продуктового лендинга Пинк">
+        </a>
+        <a href="#nowhere">
+          <img src="img/logo-4.png" width="173" height="84" alt="Логотип интернет-магазина вязанных игрушек Мишка">
+        </a>
+      </section>
+      <section>
+          <h2 class="visually-hidden">Как до нас добраться</h2>
+          <p>
+            <img src="img/map.png" width="1440" height="416" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+          </p>
+          <h3>NЁRDS DESIGN STUDIO</h3>
+          <p>
+              191186, Санкт-Петербург,<br> 
+              ул. Б. Конюшенная, д. 19/8<br>
+              тел. +7 (812) 275-75-75
+          </p>
+          <button type="button">
+              Напишите нам
+          </button>
       </section>
       <section>
         <h2>Напишите нам</h2>
@@ -82,7 +180,7 @@
         <li><a href="#nowhere">Инстаграм</a></li>
       </ul>
       <p>
-        <span>Давайте дружить это выгодно!</span>
+        <span>Давайте дружить это выгодно!</span><br>
         <span>Скидка 10% для друзей из социальных сетей.</span>
       </p>
     </footer>
