--- a/catolog.html
+++ b/catolog.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap&subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
@@ -27,25 +30,30 @@
         <h1>Магазин готовых шаблонов</h1>
         <section>
           <div>
-            <div>
-              <p>Сортировать</p>
-              <p>По цене</p>
-              <p>По типу</p>
-              <p>По названию</p>
-            </div>
-            <div>
-              <!-- <div>Здесь нарисовать линию с двумя кнопками? Тем самым с эмитировать выбор диапазонаю </div> -->
-              <p>
-              <label for="0"></label>
-              <input type="text" value="0" id="0">
-              </p>
-              <p>
-              <label for="15000"></label>
-              <input type="text" value="15000" id="15000">
-              </p>
-            </div>
+            <p>Сортировать</p>
+            <ul>
+              <li><a href="#nowhere">По цене</a></li>
+              <li><a href="#nowhere">По типу</a></li>
+              <li><a href="#nowhere">По названию</a></li>
+            </ul>
+            <ul>
+              <li><a href="#nowhere"></a></li>
+              <li><a href="#nowhere"></a></li>
+            </ul>
           </div>
           <form class="filter" method="GET" action="https://echo.htmlacademy.ru">
+            <fieldset>
+              <legend>Стоимость</legend>
+              <div class="range"></div>
+              <p>
+              <label for="price-from">От</label>
+              <input type="text" value="0" id="price-from">
+              </p>
+              <p>
+              <label for="price-to">До</label>
+              <input type="text" value="15000" id="price-to">
+              </p>
+            </fieldset>
             <fieldset>
               <legend>Сетка:</legend>
               <ul>
@@ -129,10 +137,10 @@
                     <a href="#nowhere">9900 руб.</a>
                 </li>
             </ul>
-            <button type="button">1</button>
-            <button type="button">2</button>
-            <button type="button">3</button>
-            <button type="button">Следующая</button>
+            <a href="writeus1.html">1</a>
+            <a href="writeus2.html">2</a>
+            <a href="writeus3.html">3</a>
+            <a href="writeus4.html">Следующая</a>
         </section>
         <section>
             <h2 class="visually-hidden">Как до нас добраться</h2>
@@ -141,13 +149,11 @@
             </p>
             <h3>NЁRDS DESIGN STUDIO</h3>
             <p>
-                191186, Санкт-Петербург,<br> 
-                ул. Б. Конюшенная, д. 19/8<br>
-                тел. +7 (812) 275-75-75
+              191186, Санкт-Петербург,
+              ул. Б. Конюшенная, д. 19/8
+              <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a> 
             </p>
-            <button type="button">
-                Напишите нам
-            </button>
+            <a href="writeus5.html">Напишите нам</a>
         </section>
         <section>
             <h2>Напишите нам</h2>
