--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap&subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
@@ -24,7 +27,7 @@
     <main>
       <h1>Дизайн-студия "Нёрдс"</h1>
       <section>
-        <h2 class="visually-hidden">Слайдер преимуществ</h2>
+        <h2 class="visually-hidden">Преимущества дизайн-студии "Нёрдс"</h2>
         <ul>
           <li>
             <h3>Долго, дорого,<br>скрупулезно.</h3>
@@ -32,7 +35,6 @@
             <p>
               <a href="#nowhere">Узнать больше</a>
             </p>
-            <img src="img/slide1.jpg" width="698" height="413" alt="Слайдер 1">
           </li>
           <li>
             <h3>Любим математику<br>как никто другой</h3>
@@ -40,7 +42,6 @@
             <p>
               <a href="#nowhere">Узнать больше</a>
             </p>
-            <img src="img/slide2.jpg" width="663" height="430" alt="Слайдер 2">
           </li>
           <li>
             <h3>Только ночь,<br>только хардкор</h3>
@@ -49,7 +50,6 @@
             <p>
               <a href="#nowhere">Узнать больше</a>
             </p>
-            <img src="img/slide3.jpg" width="759" height="411" alt="Слайдер 3">
           </li>
         </ul>
       </section>
@@ -57,36 +57,27 @@
         <h2>Список видов проектов</h2>
         <ul>
           <li>
-            <a href="#nowhere">
-              <img src="img/illustration-1.png" width="300" height="146" alt="Илюстратор 1">
-            </a>
             <h3>Веб-сайты</h3>
             <p>
-              Мир никогда не будет прежним<br>после того как увидит ваш сайт!
+              Мир никогда не будет прежним после того как увидит ваш сайт!
             </p>
             <p>
               <a href="#nowhere">Заказать</a>
             </p>
           </li>
           <li>
-            <a href="#nowhere">
-              <img src="img/illustration-2.png" width="300" height="146" alt="Илюстратор 2">
-            </a>
             <h3>Приложения</h3>
             <p>
-              Покорите топ-10 приложений в<br>AppStore и Google Play
+              Покорите топ-10 приложений в AppStore и Google Play
             </p>
             <p>
               <a href="#nowhere">Заказать</a>
             </p>
           </li>
           <li>
-            <a href="#nowhere">
-              <img src="img/illustration-3.png" width="300" height="146" alt="Илюстратор 3">
-            </a>
             <h3>Презентации</h3>
             <p>
-              Вы даже не подозреваете,<br>насколько вы изумительны!
+              Вы даже не подозреваете, насколько вы изумительны!
             </p>
             <p>
               <a href="#nowhere">Заказать</a>
@@ -95,9 +86,10 @@
         </ul>
       </section>
       <section>
-        <h2>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h2>
+        <h2>Рекламный блок</h2>
+        <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
         <p>
-          Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
+          Исповедуем принципы минимализма и чистоты. Ставим математический расчет
           превыше креатива. Работаем не покладая рук, как роботы.
         </p>
         <h3>Выполняем заказы на разработку:</h3>
@@ -107,21 +99,15 @@
           <li>Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
         <img src="img/nerds-illustration.png" width="360" height="208" alt="Илюстрация логотипа">
-        <h3>с 2004 года Любим точность во всем:</h3>
-        <ul>
-          <li>
-            <p>146%</p>
-            <p>Уровень самоотдачи</p>
-          </li>
-          <li>
-            <p>100%</p>
-            <p>Соблюдение сроков</p>
-          </li>
-          <li>
-            <p>50%</p>
-            <p>Минимальная предоплата</p>
-          </li>
-        </ul>
+        <h3>с 2004 года любим точность во всем:</h3>
+        <dl>
+          <dt>146%</dt>
+          <dd>Уровень самоотдачи</dd>
+          <dt>100%</dt>
+          <dd>Соблюдение сроков</dd>
+          <dt>50%</dt>
+          <dd>Минимальная предоплата</dd>
+        </dl>
       </section>
       <section>
         <h2 class="visually-hidden">Партнеры дизайн-студии «Нёрдс»</h2>
@@ -145,13 +131,11 @@
           </p>
           <h3>NЁRDS DESIGN STUDIO</h3>
           <p>
-              191186, Санкт-Петербург,<br> 
-              ул. Б. Конюшенная, д. 19/8<br>
-              тел. +7 (812) 275-75-75
-          </p>
-          <button type="button">
-              Напишите нам
-          </button>
+              191186, Санкт-Петербург,
+              ул. Б. Конюшенная, д. 19/8
+              <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a> 
+            </p>
+            <a href="writeus5.html">Напишите нам</a>
       </section>
       <section>
         <h2>Напишите нам</h2>
@@ -179,10 +163,8 @@
         <li><a href="#nowhere">Фейсбук</a></li>
         <li><a href="#nowhere">Инстаграм</a></li>
       </ul>
-      <p>
-        <span>Давайте дружить это выгодно!</span><br>
-        <span>Скидка 10% для друзей из социальных сетей.</span>
-      </p>
+      <p>Давайте дружить это выгодно!</p>
+      <p>Скидка 10% для друзей из социальных сетей.</p>
     </footer>
   </body>
 </html>
