--- a/catolog.html
+++ b/catolog.html
@@ -29,18 +29,6 @@
     <main>
         <h1>Магазин готовых шаблонов</h1>
         <section>
-          <div>
-            <p>Сортировать</p>
-            <ul>
-              <li><a href="#nowhere">По цене</a></li>
-              <li><a href="#nowhere">По типу</a></li>
-              <li><a href="#nowhere">По названию</a></li>
-            </ul>
-            <ul>
-              <li><a href="#nowhere"></a></li>
-              <li><a href="#nowhere"></a></li>
-            </ul>
-          </div>
           <form class="filter" method="GET" action="https://echo.htmlacademy.ru">
             <fieldset>
               <legend>Стоимость</legend>
@@ -98,6 +86,18 @@
             </fieldset>
             <button type="submit">Показать</button>
             </form>
+            <div>
+              <p>Сортировать</p>
+              <ul>
+                <li><a href="#nowhere">По цене</a></li>
+                <li><a href="#nowhere">По типу</a></li>
+                <li><a href="#nowhere">По названию</a></li>
+              </ul>
+              <ul>
+                <li><a href="#nowhere">По убыванию</a></li>
+                <li><a href="#nowhere">По возрастанию</a></li>
+              </ul>
+            </div>            
             <h2>Список шаблонов</h2>
             <ul>
                 <li>
@@ -153,7 +153,7 @@
               ул. Б. Конюшенная, д. 19/8
               <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a> 
             </p>
-            <a href="writeus5.html">Напишите нам</a>
+            <a href="#nowhere">Напишите нам</a>
         </section>
         <section>
             <h2>Напишите нам</h2>
