--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </ul>
       </section>
       <section>
-        <h2>Рекламный блок</h2>
+        <h2 class="visually-hidden">Рекламный блок</h2>
         <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
         <p>
           Исповедуем принципы минимализма и чистоты. Ставим математический расчет
@@ -101,12 +101,12 @@
         <img src="img/nerds-illustration.png" width="360" height="208" alt="Илюстрация логотипа">
         <h3>с 2004 года любим точность во всем:</h3>
         <dl>
-          <dt>146%</dt>
-          <dd>Уровень самоотдачи</dd>
-          <dt>100%</dt>
-          <dd>Соблюдение сроков</dd>
-          <dt>50%</dt>
-          <dd>Минимальная предоплата</dd>
+          <dt>Уровень самоотдачи</dt>
+          <dd>146%</dd>
+          <dt>Соблюдение сроков</dt>
+          <dd>100%</dd>
+          <dt>Минимальная предоплата</dt>
+          <dd>50%</dd>
         </dl>
       </section>
       <section>
@@ -135,7 +135,7 @@
               ул. Б. Конюшенная, д. 19/8
               <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a> 
             </p>
-            <a href="writeus5.html">Напишите нам</a>
+            <a href="#nowhere">Напишите нам</a>
       </section>
       <section>
         <h2>Напишите нам</h2>
