--- a/catolog.html
+++ b/catolog.html
@@ -9,19 +9,19 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="main-navigation">
         <a href="index.html">
           <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип дизайн-студии «Нёрдс»">
         </a>
-        <ul>
+        <ul class="site-navigation">
           <li><a href="#nowhere">Студия</a></li>
           <li><a href="#nowhere">Клиенты</a></li>
           <li><a href="catalog.html">Магазин</a></li>
           <li><a href="#nowhere">Контакты</a></li>
         </ul>
         <ul>
-          <li>
-             <a href="#nowhere">Корзина</a>
+          <li class="user-navigation">
+             <a class="basket" href="#nowhere">Корзина</a>
            </li>
         </ul>
       </nav>
@@ -84,14 +84,14 @@
                 </li>
               </ul>
             </fieldset>
-            <button type="submit">Показать</button>
+            <button class="show" type="submit">Показать</button>
             </form>
-            <div>
+            <div class="container">
               <p>Сортировать</p>
               <ul>
-                <li><a href="#nowhere">По цене</a></li>
-                <li><a href="#nowhere">По типу</a></li>
-                <li><a href="#nowhere">По названию</a></li>
+                <li><a class="filter-price" href="#nowhere">По цене</a></li>
+                <li><a class="filter-type" href="#nowhere">По типу</a></li>
+                <li><a class="filter-name" href="#nowhere">По названию</a></li>
               </ul>
               <ul>
                 <li><a href="#nowhere">По убыванию</a></li>
@@ -99,42 +99,42 @@
               </ul>
             </div>            
             <h2>Список шаблонов</h2>
-            <ul>
-                <li>
-                    <h3><a href="#nowhere">Sedona</a></h3>
+            <ul class="template-list">
+                <li> 
+                    <h3><a class="template" href="#nowhere">Sedona</a></h3>
                     <p>Информационный сайт для туристов</p>
                     <img src="img/img-sedona.jpg" alt="Информационный сайт для туристов">
-                    <a href="#nowhere">9900 руб.</a>
+                    <a class="button" href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
-                    <h3><a href="#nowhere">PinkApp</a></h3>
+                    <h3><a class="template" href="#nowhere">PinkApp</a></h3>
                     <p>Продуктовый лендинг приложения для iOS и Android</p>
                     <img src="img/img-pink.jpg" alt="Продуктовый лендинг приложения для iOS и Android">
-                    <a href="#nowhere">9900 руб.</a>
+                    <a class="button" href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
-                    <h3><a href="#nowhere">Barbershop</a></h3>
+                    <h3><a class="template" href="#nowhere">Barbershop</a></h3>
                     <p>Сайт салона красоты. Для мужчин, да.</p>
                     <img src="img/img-barbershop.jpg" alt="Сайт салона красоты. Для мужчин, да.">
-                    <a href="#nowhere">9900 руб.</a>
+                    <a class="button" href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
-                    <h3><a href="#nowhere">Mishka</a></h3>
+                    <h3><a class="template" href="#nowhere">Mishka</a></h3>
                     <p>Интернет-магазин вязаных игрушек</p>
                     <img src="img/img-mishka.jpg" alt="Интернет-магазин вязаных игрушек">
-                    <a href="#nowhere">9900 руб.</a>
+                    <a class="button" href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
-                    <h3><a href="#nowhere">A Plus</a></h3>
+                    <h3><a class="template" href="#nowhere">A Plus</a></h3>
                     <p>Лендинг курсов повышения квалификации</p>
                     <img src="img/img-aplus.jpg" alt="Лендинг курсов повышения квалификации">
-                    <a href="#nowhere">9900 руб.</a>
+                    <a class="button" href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
-                    <h3><a href="#nowhere">Кваст</a></h3>
+                    <h3><a class="template" href="#nowhere">Кваст</a></h3>
                     <p>Промо-сайт производителя крафтового кваса</p>
                     <img src="img/img-kvast.jpg" alt="Промо-сайт производителя крафтового кваса">
-                    <a href="#nowhere">9900 руб.</a>
+                    <a class="button" href="#nowhere">9900 руб.</a>
                 </li>
             </ul>
             <a href="writeus1.html">1</a>
@@ -181,7 +181,7 @@
               <li><a href="#nowhere">Фейсбук</a></li>
               <li><a href="#nowhere">Инстаграм</a></li>
             </ul>
-            <p>Давайте дружить это выгодно!</p>
+            <p class="foot-head">Давайте дружить это выгодно!</p>
             <p>Скидка 10% для друзей из социальных сетей.</p>
     </footer>
   </body>  
