--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="main-navigation">
         <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип дизайн-студии «Нёрдс»">
-        <ul>
+        <ul class="site-navigation">
           <li><a href="#nowhere">Студия</a></li>
           <li><a href="#nowhere">Клиенты</a></li>
           <li><a href="catalog.html">Магазин</a></li>
           <li><a href="#nowhere">Контакты</a></li>
         </ul>
         <ul>
-          <li>
-             <a href="#nowhere">Корзина</a>
+          <li class="user-navigation">
+             <a class="basket" href="#nowhere">Корзина</a>
            </li>
         </ul>
       </nav>
@@ -28,66 +28,66 @@
       <h1>Дизайн-студия "Нёрдс"</h1>
       <section>
         <h2 class="visually-hidden">Преимущества дизайн-студии "Нёрдс"</h2>
-        <ul>
-          <li>
+        <ul class="features-list">
+          <li class="features-item">
             <h3>Долго, дорого,<br>скрупулезно.</h3>
             <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
             <p>
-              <a href="#nowhere">Узнать больше</a>
+              <a class="button" href="#nowhere">Узнать больше</a>
             </p>
           </li>
-          <li>
+          <li class="features-item">
             <h3>Любим математику<br>как никто другой</h3>
             <p>Никакого креатива, только математические формулы<br>для расчета идеальных пропорций.</p>
             <p>
-              <a href="#nowhere">Узнать больше</a>
+              <a class="button" href="#nowhere">Узнать больше</a>
             </p>
           </li>
-          <li>
+          <li class="features-item">
             <h3>Только ночь,<br>только хардкор</h3>
             <p>Работать днем, как все? Мы против этого.<br>
               Ближе к полуночи работа только начинается.</p>
             <p>
-              <a href="#nowhere">Узнать больше</a>
+              <a class="button" href="#nowhere">Узнать больше</a>
             </p>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Список видов проектов</h2>
-        <ul>
-          <li>
+        <h2 class="visually-hidden">Список видов проектов</h2>
+        <ul class="projects">
+          <li class="project">
             <h3>Веб-сайты</h3>
             <p>
               Мир никогда не будет прежним после того как увидит ваш сайт!
             </p>
             <p>
-              <a href="#nowhere">Заказать</a>
+              <a class="button" href="#nowhere">Заказать</a>
             </p>
           </li>
-          <li>
+          <li class="project">
             <h3>Приложения</h3>
             <p>
               Покорите топ-10 приложений в AppStore и Google Play
             </p>
             <p>
-              <a href="#nowhere">Заказать</a>
+              <a class="button_application" href="#nowhere">Заказать</a>
             </p>
           </li>
-          <li>
+          <li class="project">
             <h3>Презентации</h3>
             <p>
               Вы даже не подозреваете, насколько вы изумительны!
             </p>
             <p>
-              <a href="#nowhere">Заказать</a>
+              <a class="button_plantation" href="#nowhere">Заказать</a>
             </p>
           </li>
         </ul>
       </section>
-      <section>
+      <section class="applications">
         <h2 class="visually-hidden">Рекламный блок</h2>
-        <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+        <p class="application-header">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
         <p>
           Исповедуем принципы минимализма и чистоты. Ставим математический расчет
           превыше креатива. Работаем не покладая рук, как роботы.
@@ -135,7 +135,7 @@
               ул. Б. Конюшенная, д. 19/8
               <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a> 
             </p>
-            <a href="#nowhere">Напишите нам</a>
+            <a class="button" href="#nowhere">Напишите нам</a>
       </section>
       <section>
         <h2>Напишите нам</h2>
@@ -163,7 +163,7 @@
         <li><a href="#nowhere">Фейсбук</a></li>
         <li><a href="#nowhere">Инстаграм</a></li>
       </ul>
-      <p>Давайте дружить это выгодно!</p>
+      <p class="foot-head">Давайте дружить это выгодно!</p>
       <p>Скидка 10% для друзей из социальных сетей.</p>
     </footer>
   </body>
