Исправление базовой стилизации 1

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               Покорите топ-10 приложений в AppStore и Google Play
             </p>
             <p>
-              <a class="button-green" href="#nowhere">Заказать</a>
+              <a class="button-green button" href="#nowhere">Заказать</a>
             </p>
           </li>
           <li class="project">
@@ -80,7 +80,7 @@
               Вы даже не подозреваете, насколько вы изумительны!
             </p>
             <p>
-              <a class="button-yellow" href="#nowhere">Заказать</a>
+              <a class="button-yellow button" href="#nowhere">Заказать</a>
             </p>
           </li>
         </ul>
