--- a/catolog.html
+++ b/catolog.html
@@ -26,7 +26,7 @@
         </ul>
       </nav>
     </header>
-    <main class="main-catolog">
+    <main class="catolog">
         <h1>Магазин готовых шаблонов</h1>
         <section>
           <form class="filter" method="GET" action="https://echo.htmlacademy.ru">
