--- a/catalog.html
+++ b/catalog.html
@@ -122,7 +122,7 @@
         <ul class="template-list">
           <li class="site-goods template-list-item">
             <div class="template-img">
-              <img src="img/img-sedona.jpg" alt="Информационный сайт для туристов">
+              <img src="img/img-sedona.jpg" width="360" height="576" alt="Информационный сайт для туристов">
             </div>
             <div class="template-info">
               <h3 class="template-header"><a class="template-title" href="#nowhere">Sedona</a></h3>
@@ -131,7 +131,7 @@
             </div>
           </li>
           <li class="site-goods template-list-item">
-            <img class="template-img" src="img/img-pink.jpg" width="360px" height="576px"
+            <img class="template-img" src="img/img-pink.jpg" width="360" height="576"
               alt="Продуктовый лендинг приложения для iOS и Android">
             <div class="template-info">
               <h3 class="template-header">
@@ -142,7 +142,7 @@
             </div>
           </li>
           <li class="site-goods template-list-item">
-            <img class="template-img" src="img/img-barbershop.jpg" width="360px" height="576px"
+            <img class="template-img" src="img/img-barbershop.jpg" width="360" height="576"
               alt="Сайт салона красоты. Для мужчин, да.">
             <div class="template-info">
               <h3 class="template-header"><a class="template-title" href="#nowhere">Barbershop</a></h3>
@@ -151,7 +151,7 @@
             </div>
           </li>
           <li class="site-goods template-list-item">
-            <img class="template-img" src="img/img-mishka.jpg" width="360px" height="576px"
+            <img class="template-img" src="img/img-mishka.jpg" width="360" height="576"
               alt="Интернет-магазин вязаных игрушек">
             <div class="template-info">
               <h3 class="template-header"><a class="template-title" href="#nowhere">Mishka</a></h3>
@@ -160,7 +160,7 @@
             </div>
           </li>
           <li class="site-goods template-list-item">
-            <img class="template-img" src="img/img-aplus.jpg" width="360px" height="576px"
+            <img class="template-img" src="img/img-aplus.jpg" width="360" height="576"
               alt="Лендинг курсов повышения квалификации">
             <div class="template-info">
               <h3 class="template-header"><a class="template-title" href="#nowhere">A Plus</a></h3>
@@ -169,7 +169,7 @@
             </div>
           </li>
           <li class="site-goods template-list-item">
-            <img class="template-img" src="img/img-kvast.jpg" width="360px" height="576px"
+            <img class="template-img" src="img/img-kvast.jpg" width="360" height="576"
               alt="Промо-сайт производителя крафтового кваса">
             <div class="template-info">
               <h3 class="template-header"><a class="template-title" href="#nowhere">Кваст</a>
