--- a/index.html
+++ b/index.html
@@ -108,27 +108,30 @@
         <img class="application-illustration" src="img/nerds-illustration.png" width="360" height="208"
           alt="Илюстрация логотипа">
         <h3 class="application-header2">с 2004 года любим точность во всем:</h3>
-        <dl class="application-descriptions">
-          <div class="application-descriptions-item">
-            <dd class="descriptions-item-value">146
-              <span class="descriptions-item-percent">%</span>
+        <table class="application-descriptions">
+          <tr>
+            <td class="descriptions-item-value">146
+              <span class="descriptions-item-percent">%</td>
+            <td class="descriptions-item-value">100
+              <span class="descriptions-item-percent">%</span></td>
+            <td class="descriptions-item-value">50
+              <span class="descriptions-item-percent">%</span></td>
+          </tr>
+          <tr>
+            <td class="descriptions-item-text">Уровень<br>самоотдачи</td>
+            <td class="descriptions-item-text">Соблюдение<br>сроков</td>
+            <td class="descriptions-item-text">Минимальная<br>предоплата</td>
+          </tr>
+            <!-- <dd class="descriptions-item-value"></span>
             </dd>
-            <dt>Уровень<br>самоотдачи</dt>
-          </div>
-          <div class="application-descriptions-item">
-            <dd class="descriptions-item-value">100
-              <span class="descriptions-item-percent">%</span>
+            <dt></dt>
+            <dd class="descriptions-item-value">
             </dd>
-            <dt>Соблюдение<br>сроков</dt>
-          </div>
-          <div class="application-descriptions-item">
-            <dd class="descriptions-item-value">50
-              <span class="descriptions-item-percent">%</span>
+            <dt></dt>
+            <dd class="descriptions-item-value">
             </dd>
-            <dt>Минимальная<br>предоплата</dt>
-          </div>
-        </dl>
-      </div>
+            <dt></dt> -->
+          </table>
     </section>
     <section class="partners container">
       <h2 class="visually-hidden">Партнеры дизайн-студии «Нёрдс»</h2>
